Add ffmpeg package for flac streaming also update the .env file update the koel version to v2.1.0

--- a/files/.env
+++ b/files/.env
@@ -28,3 +28,30 @@ MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 
+
+# If you want to transcode FLAC to MP3 and stream it on the fly, make sure the
+# following settings are sane.
+
+# The full path of ffmpeg binary.
+FFMPEG_PATH=/usr/bin/ffmpeg
+
+# The bit rate of the output mp3 stream. Higher value results in better quality,
+# but slower streaming and more bandwidth.
+OUTPUT_BIT_RATE=128
+
+
+# Another random 32-char string
+JWT_SECRET=
+
+
+# The streaming method.
+# Can be either 'php' (default), 'x-sendfile', or 'x-accel-redirect'
+# See https://github.com/phanan/koel/wiki#streaming-music for more information.
+# Note: This setting doesn't have effect if the media needs transcoding (e.g. FLAC).
+STREAMING_METHOD=php
+
+
+# If you want Koel to integrate with Last.fm, set the API details here.
+LASTFM_API_KEY=
+LASTFM_API_SECRET=
+
