- Change the nginx user correctly with the lattest version of alpine - Update the .env file for koel v3.0.1 - Generate thee JWT and app key when stating the container

--- a/files/.env
+++ b/files/.env
@@ -1,6 +1,9 @@
 #AP_ENV=local
 #APP_DEBUG=false
-APP_KEY=JIOjhioh4iohou7888
+APP_KEY=
+
+# Another random 32-char string
+JWT_SECRET=
 
 # Username and passsword for the initial admin account
 # This info will be populated into the database during `php artisan db:seed`
@@ -40,8 +43,12 @@ FFMPEG_PATH=/usr/bin/ffmpeg
 OUTPUT_BIT_RATE=128
 
 
-# Another random 32-char string
-JWT_SECRET=
+# Whether to allow song downloading.
+# Note that if you're downloading more than one song, Koel will zip them up
+# using PHP's ZipArchive. So if the module isn't available in the current
+# environment, such a download will (silently) fail.
+ALLOW_DOWNLOAD=true
+
 
 
 # The streaming method.
@@ -55,3 +62,5 @@ STREAMING_METHOD=php
 LASTFM_API_KEY=
 LASTFM_API_SECRET=
 
+# If you want Koel to integrate with YouTube, set the API key here.
+YOUTUBE_API_KEY=
